--- a/src/window.html
+++ b/src/window.html
@@ -15,22 +15,22 @@
     <ul class="list">
       <div class="sort-bar">
         <div class="title">SC Viewer</div>
-          <svg
-            class="mini-icon"
-            viewBox="0 0 939 939"
-            version="1.1"
-            xmlns="http://www.w3.org/2000/svg"
-            width="20"
-            height="20"
-          >
-            <path
-              d="m42.68032,0q18.00192,0 30.33088,12.32896l268.32896,268.32896l0,-195.66592q0,-17.67424 12.4928,-30.16704t30.16704,-12.4928t30.16704,12.4928t12.4928,30.16704l0,298.65984q0,17.67424 -12.67712,30.33088t-30.33088,12.67712l-298.65984,0q-17.67424,0 -30.16704,-12.4928t-12.4928,-30.16704t12.4928,-30.16704t30.16704,-12.4928l195.66592,0l-268.32896,-268.32896q-12.32896,-12.32896 -12.32896,-30.33088q0,-18.3296 12.16512,-30.49472t30.49472,-12.16512l0.02048,-0.02048zm512.32768,512l298.65984,0q17.67424,0 30.16704,12.4928t12.4928,30.16704t-12.4928,30.16704t-30.16704,12.4928l-195.66592,0l268.00128,268.32896q12.67712,12.67712 12.67712,30.33088t-12.4928,30.16704t-30.16704,12.4928q-18.00192,0 -30.33088,-12.32896l-268.32896,-268.32896l0,195.66592q0,17.67424 -12.4928,30.16704t-30.16704,12.4928t-30.16704,-12.4928t-12.4928,-30.16704l0,-298.65984q0,-17.67424 12.67712,-30.33088t30.33088,-12.67712l-0.04096,0.02048z"
-            />
-          </svg>
+        <svg
+          class="mini-icon"
+          viewBox="0 0 939 939"
+          version="1.1"
+          xmlns="http://www.w3.org/2000/svg"
+          width="20"
+          height="20"
+        >
+          <path
+            d="m42.68032,0q18.00192,0 30.33088,12.32896l268.32896,268.32896l0,-195.66592q0,-17.67424 12.4928,-30.16704t30.16704,-12.4928t30.16704,12.4928t12.4928,30.16704l0,298.65984q0,17.67424 -12.67712,30.33088t-30.33088,12.67712l-298.65984,0q-17.67424,0 -30.16704,-12.4928t-12.4928,-30.16704t12.4928,-30.16704t30.16704,-12.4928l195.66592,0l-268.32896,-268.32896q-12.32896,-12.32896 -12.32896,-30.33088q0,-18.3296 12.16512,-30.49472t30.49472,-12.16512l0.02048,-0.02048zm512.32768,512l298.65984,0q17.67424,0 30.16704,12.4928t12.4928,30.16704t-12.4928,30.16704t-30.16704,12.4928l-195.66592,0l268.00128,268.32896q12.67712,12.67712 12.67712,30.33088t-12.4928,30.16704t-30.16704,12.4928q-18.00192,0 -30.33088,-12.32896l-268.32896,-268.32896l0,195.66592q0,17.67424 -12.4928,30.16704t-30.16704,12.4928t-30.16704,-12.4928t-12.4928,-30.16704l0,-298.65984q0,-17.67424 12.67712,-30.33088t30.33088,-12.67712l-0.04096,0.02048z"
+          />
+        </svg>
       </div>
       <li class="card">
         <div class="head">
-          <span class="medal">
+          <span class="medal medal-left-margin">
             <div class="medal-label">
               <i class="medal-icon"></i>
               <span class="medal-name">粉丝牌</span>
@@ -41,7 +41,7 @@
           <span class="price">30</span>
         </div>
         <div class="body">
-          日照香炉生紫烟，遥看瀑布挂前川，飞流直下三千尺，疑是银河落九天
+          <div class="message">日照香炉生紫烟，遥看瀑布挂前川，飞流直下三千尺，疑是银河落九天</div>
           <div class="translation">君もゼルダで遊んでいたのか</div>
         </div>
         <div class="footer">
